--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,9 @@ img{
     justify-content: space-around;
     flex-wrap: wrap;
 }
+.btn button{
+   width: 150px;
+}
 button:focus, button:hover {
     border: 3px solid black;
 }
