--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,10 @@ li, h1, h2, p{
     align-items: center;
     color: black;
 }
+.nav_links li a{
+    color: black;
+    text-decoration: none;
+}
 .nav_links .active{
     border: 3px solid black;
 }
