--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ li, h1, h2, p{
 }
 .skip a{
     background: white;
+    font-family: Arial, Helvetica, sans-serif;
     left: 0;
     padding: 6px;
     -webkit-transition: top 1s ease-out;
