--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ li, h1, h2, p{
   .skipLink{
     color: black;
     text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
   }
   
   .skip :focus{
